Add initial login code and modify login api route

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "start": "cd server && npm run start"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
+  }
 }
