Fixed bugs for journal APIs

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -12,6 +12,7 @@
     "rules": {
         "prefer-const": "warn",
         "array-callback-return": "error",
-        "eqeqeq": "warn"
+        "eqeqeq": "warn",
+        "no-const-assign": "error"
     }
 }
