--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.4",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "google-auth-library": "^9.6.3",
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
