--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "start": "node bin/www.js",
     "env": "touch .env && echo ATLAS_URI= > .env",
-    "test": "echo setup jest pls :)"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "jest": "^29.7.0",
+    "mongoose": "^8.1.3",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "eslint": "^8.56.0"
