--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -13,6 +13,8 @@
         "prefer-const": "warn",
         "array-callback-return": "error",
         "eqeqeq": "warn",
-        "no-const-assign": "error"
+        "no-const-assign": "error",
+        "no-unused-vars": "off",
+        "no-unused-vars": "off"
     }
 }
