--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node bin/www.js",
     "env": "touch .env && echo ATLAS_URI= > .env",
-    "test": "echo setup jest pls :)"
+    "eslint": "eslint ./",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,8 @@
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
