--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.6.3",
     "mongoose": "^8.1.3"
   },
