--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: node:18.18.0
 
 workflow:
   rules:
-    if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
 
 stages:
   - lint
