--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ lint-client:
   script:
     - npm install && npm install eslint && npm install eslint-plugin-react
     - cd client && npm run lint
-  allow_failure: true
+  allow_failure: false
 
   
 lint-server:
