--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dreamscape",
   "version": "1.0.0",
   "scripts": {
-    "build": "cd client && npm install && npm run build && cd ../server && npm install && npm run env",
+    "setup": "cd client && npm install && npm run build && cd ../server && npm install && npm run env",
+    "build": "cd client && npm install && npm run build && cd ../server && npm install",
     "start": "cd server && npm run start"
   },
   "author": "",
