--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint **/*.js"
+    "lint": "eslint ./src/*.js"
   },
   "browserslist": {
     "production": [
@@ -36,6 +36,6 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.34.0"
   }
 }
