--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.6.3",
