--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "node bin/www.js",
-    "seed": "node database/seed.js && node database/questionSeed.js ",
+    "seed": "node database/seed.js && node database/questionSeed.js && node database/tarotSeed.js",
     "env": "touch .env && echo ATLAS_URI= > .env",
     "test": "jest",
     "lint": "eslint **/*.js"
