--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,18 @@ stages:
 lint-client:
   stage: lint 
   script:
-    - npm install && npm install eslint && npm install eslint-plugin-react
-    - cd client && npm run lint
+    - cd client
+    - npm install
+    - npm run lint
   allow_failure: false
 
   
 lint-server:
   stage: lint 
   script:
-    - npm install && npm install eslint
-    - cd server && npm run lint
+    - cd server
+    - npm install
+    - npm run lint
   allow_failure: false
 
 server-test:
@@ -35,6 +37,6 @@ client-build:
   stage: test
   script:
     - cd client
-    - npm install
+    - npm install --omit=dev
     - npm run build
   allow_failure: false
