Fixing more pipeline errors

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "ignorePatterns": ["node_modules/**/*.js"],
+    "ignorePatterns": ["node_modules/**/*.js", "node_modules/*.js"],
     "env": {
         "browser": true,
         "node": true,
