--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ lint-client:
   stage: lint 
   script:
     - cd client
-    - npm install eslint
+    - npm install && npm install @babel/plugin-proposal-private-property-in-object
     - npm ci --cache .cache/client
     - npm run lint
   allow_failure: false
