--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "seed": "node database/seed.js && node database/questionSeed.js && node database/tarotSeed.js",
     "env": "touch .env && echo ATLAS_URI= > .env",
     "test": "jest",
-    "lint": "eslint --ignore-path .eslintignore **/*.js"
+    "lint": "eslint bin/**/*.js && eslint database/**/*.js && eslint routers/**/*.js && eslint api.js"
   },
   "author": "",
   "license": "ISC",
