--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "memory-cache": "^0.2.0",
     "mongoose": "^8.1.3",
     "supertest": "^6.3.4"
   },
