--- a/package.json
+++ b/package.json
@@ -7,9 +7,5 @@
     "start": "cd server && npm run start"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@react-oauth/google": "^0.12.1",
-    "jsonwebtoken": "^9.0.2"
-  }
+  "license": "ISC"
 }
