--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "expo-status-bar": "^1.11.1",
     "plotly.js": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.73.6",
     "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
