--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "azure": "^2.3.1-preview",
+    "azure-storage-blob": "^0.0.1-security",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.6.3",
