--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "azure": "^2.3.1-preview",
     "azure-storage-blob": "^0.0.1-security",
     "compression": "^1.7.4",
